[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Images/dialog_background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/next-indicator.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/NotoSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Dialog System/Ink_Scripts/Ink_handler.gd" type="Script" id=4]
[ext_resource path="res://Assets/Portraits/Npc.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/Cave-Story.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Portraits/Player.png" type="Texture" id=7]
[ext_resource path="res://Assets/Portraits/tree_portrait.jpg" type="Texture" id=8]
[ext_resource path="res://Assets/Sounds/dialog_intro.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/choice.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sounds/tree.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sounds/npc.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sounds/dialog_choice.wav" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 570.372, 150.99 ), Vector2( 570.372, 160 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 6 )

[node name="DialogSystem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.11359
margin_top = -0.528442
margin_right = -2.11359
margin_bottom = -0.528442
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -311.0
margin_top = -230.0
margin_right = 311.0
margin_bottom = -41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DialogBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -311.528
margin_top = -189.0
margin_right = 310.472
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceContainer" type="VBoxContainer" parent="DialogBox/TextureRect"]
anchor_left = 0.5
anchor_top = 0.659
anchor_right = 0.5
anchor_bottom = 0.659
margin_left = -311.0
margin_top = -24.551
margin_right = 224.0
margin_bottom = 63.449
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" type="RichTextLabel" parent="DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.4715
margin_top = 13.9432
margin_right = -15.5284
margin_bottom = -96.0568
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.333333, 0.227451, 0.0862745, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next-indicator" type="Sprite" parent="DialogBox"]
visible = false
position = Vector2( 570.372, 154.325 )
scale = Vector2( 0.55, 0.5 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogBox/next-indicator"]
autoplay = "Idle"
anims/Idle = SubResource( 2 )

[node name="Tween" type="Tween" parent="DialogBox"]

[node name="NPCContainer" type="Control" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 145.386
margin_top = -97.0515
margin_right = 545.386
margin_bottom = 83.9485
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="NPCContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 72.6249
margin_top = 14.6763
margin_right = -77.3751
margin_bottom = -3.3237
color = Color( 0.992157, 0.968627, 0.772549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCPortrait" type="TextureRect" parent="NPCContainer"]
margin_left = 114.148
margin_top = 61.7502
margin_right = 460.148
margin_bottom = 365.75
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="NPCLabel" type="Label" parent="NPCContainer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -115.028
margin_top = 34.8746
margin_right = -23.0278
margin_bottom = 66.8746
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.333333, 0.227451, 0.0862745, 1 )
text = "Old Man:"

[node name="TreeContainer" type="Control" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 300.0
margin_top = -97.051
margin_right = 700.0
margin_bottom = 83.949
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TreeContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 73.1533
margin_top = 14.6763
margin_right = -76.8467
margin_bottom = -3.3237
color = Color( 0.992157, 0.968627, 0.772549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreePortrait" type="TextureRect" parent="TreeContainer"]
margin_left = 114.148
margin_top = 61.7502
margin_right = 460.148
margin_bottom = 365.75
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="TreeLabel" type="Label" parent="TreeContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -115.028
margin_top = 34.8746
margin_right = -23.0278
margin_bottom = 66.8746
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.333333, 0.227451, 0.0862745, 1 )
text = "Tree:"

[node name="PlayerContainer" type="Control" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 445.0
margin_top = -97.051
margin_right = 845.0
margin_bottom = 83.949
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PlayerContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 73.6817
margin_top = 14.6763
margin_right = -76.3183
margin_bottom = -3.3237
color = Color( 0.992157, 0.968627, 0.772549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPortrait" type="TextureRect" parent="PlayerContainer"]
margin_left = 113.0
margin_top = 62.0
margin_right = 303.0
margin_bottom = 262.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="PlayerLabel" type="Label" parent="PlayerContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -115.028
margin_top = 34.8746
margin_right = -23.0278
margin_bottom = 66.8746
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.333333, 0.227451, 0.0862745, 1 )
text = "Player:"

[node name="IntroSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="ChoiceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="TreeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="OldManSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="DialogChoice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[connection signal="tween_completed" from="DialogBox/Tween" to="DialogBox" method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="DialogBox/Tween" to="." method="_on_Tween_tween_completed"]
